# IRPM

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_settings.bat  rebuild.bat  rmbuild.bat
apps/test/: CMakeLists.txt  main.cpp
config/cmake/: cmake_path.cmake
libraries/network/: CMakeLists.txt  tcp_connection.cpp
libraries/network/include/network/: tcp_connection.hpp
